[package]
name = "esp-async-http-server"
version = "0.1.0"
authors = ["lz1998 <875543533@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-svc = { version = "0.47", default-features = false }
esp-async-tcp = { git = "https://github.com/lz1998/esp-async-tcp.git", branch = "main" }
httparse = { version = "1.8.0", default-features = false }

[build-dependencies]
embuild = "0.31.3"
