[package]
name = "esp-async-http-server"
version = "0.1.0"
authors = ["lz1998 <875543533@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
httparse = { version = "1.8.0", default-features = false }
embedded-io-async = "0.6"
